# cephix

./: .dockerignore  .gitignore  Dockerfile.docs  README.md  README_DE.md  TODO.md  command_layer_chunk1.plan.md  lifecycle_capabilities_chunk2.plan.md  mkdocs.yml  persistence_dao_chunk4a.plan.md  persistence_lifecycle_chunk3.plan.md  pyproject.toml  readme2.md  requirements-docs.txt  resource_bringup_chunk4.plan.md
.github/workflows/: docs.yml
_reference/: README.md  TODO.md
_reference/src/: bus.py  cli.py  domain.py  net.py  service.py  telemetry.py  toolbuilder.py
_reference/tests/: test_approval_flow_e2e.py  test_compaction.py  test_core_memory.py  test_event_loop.py  test_general_mode.py  test_integration_flow.py  test_kernel_components.py  test_llm_providers.py  test_mail_driver_factory.py  test_memory_stack.py  test_runtime.py  test_websocket_integration.py
docs/: CODE_MAP.md  GAPS.md  HARNESS.md  MEMORY.md  NOTEBOOK.md  RUN_FLOW.md  index.md  state.md
docs/adr/: 0001-use-mkdocs-material.md  0002-diagrams-mermaid-and-c4.md  0003-no-codec-abstraction-yet.md  0004-credential-layers.md  0005-robot-per-user-and-multi-mailbox-tenancy.md  0006-central-time-source.md  index.md
docs/architecture/: code-map.md  diagrams.md  overview.md  robot-os-target.md  run-flow.md
docs/concepts/: governance.md  harness-model.md  memory.md  notebooks.md  runtime-lifecycle.md  sops.md  toolbuilder.md
docs/getting-started/: installation.md  project-layout.md  quickstart.md
docs/project/: changelog.md  roadmap.md  status.md
docs/reference/: api.md  cli.md  configuration.md  external-references.md  glossary.md  websocket.md
robot/firmware/: AGENTS.md  HEARTBEAT.md
robot/memory/: BOOTSTRAP.md  IDENTITY.md  TOOLS.md
robot/sops/: order-export.yaml
scripts/: demo_audit_telemetry.py
src/: __init__.py  __main__.py  app.py  builder.py  cli.py  cli_client.py  components.py  configuration.py  context.py  control.py  defaults.yaml  domain.py  logging_config.py  onboarding.py  ports.py  registry.py  robot.py  service.py  telemetry.py  utils.py
src/actor/: __init__.py  echo.py  ports.py  types.py
src/audit/: __init__.py  note_sink.py
src/bus/: __init__.py  asyncio_bus.py  messages.py  ports.py
src/channels/: __init__.py  heartbeat.py  ports.py  websocket.py
src/command/: __init__.py  spec.py  wiring.py
src/credentials/: __init__.py  exceptions.py  ports.py  provider.py  substitution.py
src/firmware/: AGENTS.md  POLICY.md
src/gateways/: __init__.py  hub.py  telegram.py  webchat.py  websocket.py
src/governance/: __init__.py  models.py  ports.py  tool_guard.py
src/kernel/: __init__.py  base.py  chat.py  echo.py  ports.py  run.py
src/llm/: __init__.py  actor.py  actor_base.py  anthropic.py  catalog.py  factory.py  litellm.py  metadata_service.py  (+7 more)
tests/: test_builder.py  test_cli.py  test_cli_client.py  test_command_layer_integration.py  test_components.py  test_configuration.py  test_context.py  test_core_memory.py  test_event_loop.py  test_general_mode.py  test_integration_flow.py  test_kernel_components.py  test_llm_port.py  test_logging_config.py  test_onboarding.py  test_persistent_memory.py  test_registry.py  test_robot.py  test_runtime.py  test_session_commands.py  test_websocket_integration.py
(+180 files in other folders)
