[project]
name = "cephix-drp"
version = "0.1.0"
description = "Digital robot prototype with a semantic bus and deterministic kernel."
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9", "PyYAML>=6.0", "python-slugify>=8.0,<9"]

[project.optional-dependencies]
cli = ["rich>=13.7"]
dev = ["pytest>=8.0"]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.50",
]
litellm = ["litellm>=1.50"]
all-llm = ["anthropic>=0.40", "openai>=1.50", "litellm>=1.50"]

[project.scripts]
cephix = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
