[project]
name = "cephix"
version = "0.3.0"
description = "Bus-centric robot OS prototype."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "python-dotenv>=1.0",
    "llmprice-kit>=2026.4",
    "openai>=1.0",
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
cephix = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["_reference*", "_reference.*"]

[tool.setuptools.package-data]
"src" = ["defaults.yaml", "firmware/*.md"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
