[project]
name = "cephix"
version = "0.3.0"
description = "Bus-centric robot OS prototype."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "python-dotenv>=1.0",
    "llmprice-kit>=2026.4",
    "openai>=1.0",
    "croniter>=2.0",
    "mcs-driver-core",
    "mcs-driver-mailbox",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

# In-tree MCS sub-packages. Each lives under packages/<name>/ with
# its own pyproject.toml so it can later ship to PyPI as a standalone
# distribution -- see ``packages/mcs-driver-mailbox/README.md``. The
# workspace is uv-only; setuptools (Cephix's own build backend) is
# not aware of it.
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# Sibling MCS python-sdk -- editable path dependency until the SDK
# hits a stable PyPI version we can pin.
mcs-driver-core = { path = "../../modelcontextstandard/python-sdk/packages/core", editable = true }
# Cephix-local MCS tool drivers resolved through the uv workspace.
# Swapping any of these for a PyPI release later means dropping the
# entry here; the import path (`mcs.driver.<capability>`) stays the
# same.
mcs-driver-mailbox = { workspace = true }

[project.scripts]
cephix = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["_reference*", "_reference.*"]

[tool.setuptools.package-data]
"src" = ["defaults.yaml", "firmware/*.md"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests", "packages/mcs-driver-mailbox/tests"]
asyncio_mode = "auto"
